--- a/.github/workflows/update-vm.yml
+++ b/.github/workflows/update-vm.yml
@@ -11,6 +11,14 @@ on:
         description: 'Virtual Machine User'
         required: true
         type: string
+      image_name:
+        description: 'Docker Image Name'
+        required: true
+        type: string
+      container_name:
+        description: 'Docker Container Name'
+        required: true
+        type: string
     secrets:
       key:
         description: 'SSH Private Key to access the virtual machine'
@@ -32,5 +40,8 @@ jobs:
         key: ${{ secrets.key }}
         script: |
           cd ingsis-infra
+          sudo docker stop ${{ inputs.container_name }}
+          sudo docker rm ${{ inputs.container_name }}
+          sudo docker rmi ${{ inputs.image_name }}
           sudo docker compose down
         #  sudo docker compose up -d
