--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -50,6 +50,7 @@ jobs:
     with:
       host: ${{ github.ref_name == 'main' && '20.70.208.179' || '20.213.8.120' }}
       user: ${{ github.ref_name == 'main' && 'students' || 'matichialva' }}
+      registry: ghcr.io
       image_name: ${{ github.ref_name == 'main' && 'ingsis-students/ingsis-parse' || 'ingsis-students/ingsis-parse-prod' }}
       container_name: 'printscript-api'
     secrets:
