--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.security:spring-security-oauth2-jose' // JWT decoding and validation
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
+
 
     implementation("org.springframework.boot:spring-boot-starter-data-redis-reactive") // reactive access to redis stream
     implementation("org.springframework.boot:spring-boot-starter-webflux") // reactive webapp, requests simultaneously.
@@ -95,7 +97,7 @@ kover {
     reports {
         verify {
             rule {
-                minBound(20)
+                minBound(80)
             }
         }
     }
